Fix layout issue with grades container

--- a/style.css
+++ b/style.css
@@ -466,6 +466,15 @@ button.close:hover {
     transition: 0.2s ease;
 }
 
+.gradesContainer {
+    overflow-y: auto;
+    max-height: 200px; 
+    width: 98%;
+    padding-bottom: 10px;
+    overflow-x: hidden;
+    margin-top: 10px;
+    padding-right: 5px;
+}
 #GradeCreationPopupButton:hover {
     background-color: #0056b3;
 }
@@ -499,9 +508,33 @@ button.close:hover {
     flex-direction: row;
     justify-content: space-between;
     width: 98%;
-    height: 10px;
+    height: 13px;
+    margin-top: -5px;
+    padding-bottom: 5px;
 }
 
+.gradesContainer::-webkit-scrollbar {
+    width: 8px; /* Breite der Scrollbar */
+    
+}
+
+.gradesContainer::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 5px;
+}
+
+
+.gradesContainer::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+.gradesContainer::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+    border-radius: 5px;
+    width: 12px; /* Farbe des beweglichen Teils der Scrollbar beim Überfahren mit der Maus */
+}
 
 
 #gradeDate {
@@ -775,3 +808,4 @@ button.close:hover {
     outline: none;
     background-color: #ffffff;
 }
+
